--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinithorn S.</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/src/css/main.css" />
     <link rel="icon"href="/favicon-32x32.png"type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="all">
       <div class="profile">
-        <img src="/img/porfile.jpg" alt="" />
+        <img src="/src/img/porfile.jpg" alt="Profile Picture" />
       </div>
       <div class="text">
         <h1>Vinithorn Sawangwong</h1>
@@ -24,11 +24,11 @@
         </p>
       </div>
       <div class="contact">
-        <a href="https://www.facebook.com/profile.php?id=100009259282189"><img src="/img/communication.png"/></a>
-        <a href="https://www.instagram.com/thunder.sowilo/"><img src="/img/social.png"/></a>
-        <a href="https://www.youtube.com/@thunder.sowilo"><img src="/img/youtube.png"/></a>
-        <a href="https://www.tiktok.com/@thunder.sowilo" /><img src="/img/tik-tok.png"/></a>
-        <a href="https://github.com/Thunder-Sowilo" ><img src="/img/github-logo.png"/></a>
+        <a href="https://www.facebook.com/profile.php?id=100009259282189"><img src="/src/img/communication.png"/></a>
+        <a href="https://www.instagram.com/thunder.sowilo/"><img src="/src/img/social.png"/></a>
+        <a href="https://www.youtube.com/@thunder.sowilo"><img src="/src/img/youtube.png"/></a>
+        <a href="https://www.tiktok.com/@thunder.sowilo" /><img src="/src/img/tik-tok.png"/></a>
+        <a href="https://github.com/Thunder-Sowilo" ><img src="/src/img/github-logo.png"/></a>
       </div>
     </div>
   </body>
