Fix image and CSS paths

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinithorn S.</title>
-    <link rel="stylesheet" href="/src/css/main.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/css/main.css" />
     <link rel="icon"href="/favicon-32x32.png"type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="all">
       <div class="profile">
-        <img src="/src/img/porfile.jpg" alt="Profile Picture" />
+        <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/porfile.jpg" alt="Profile Picture" />
       </div>
       <div class="text">
         <h1>Vinithorn Sawangwong</h1>
