Fix image and CSS paths

--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
         </p>
       </div>
       <div class="contact">
-        <a href="https://www.facebook.com/profile.php?id=100009259282189"><img src="/src/img/communication.png"/></a>
-        <a href="https://www.instagram.com/thunder.sowilo/"><img src="/src/img/social.png"/></a>
-        <a href="https://www.youtube.com/@thunder.sowilo"><img src="/src/img/youtube.png"/></a>
-        <a href="https://www.tiktok.com/@thunder.sowilo" /><img src="/src/img/tik-tok.png"/></a>
-        <a href="https://github.com/Thunder-Sowilo" ><img src="/src/img/github-logo.png"/></a>
+        <a href="https://www.facebook.com/profile.php?id=100009259282189">
+          <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/communication.png" alt="Facebook" />
+      </a>
+      <a href="https://www.instagram.com/thunder.sowilo/">
+          <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/social.png" alt="Instagram" />
+      </a>
+      <a href="https://www.youtube.com/@thunder-sowilo">
+          <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/youtube.png" alt="YouTube" />
+      </a>
+      <a href="https://www.tiktok.com/@thunder.sowilo">
+          <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/tik-tok.png" alt="TikTok" />
+      </a>
+      <a href="https://github.com/Thunder-Sowilo">
+          <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/github-logo.png" alt="GitHub" />
+      </a>
       </div>
     </div>
   </body>
