--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinithorn S.</title>
     <link rel="stylesheet" href="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/css/main.css" />
+    <link href="/src/css/main.css">
     <link rel="icon"href="/favicon-32x32.png"type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
   </head>
