Fix image and CSS paths

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="https://www.instagram.com/thunder.sowilo/">
           <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/social.png" alt="Instagram" />
       </a>
-      <a href="https://www.youtube.com/@thunder-sowilo">
+      <a href="https://youtube.com/@thunder.sowilo?si=IYNKePCu7XtNXwmr">
           <img src="https://raw.githubusercontent.com/Thunder-Sowilo/NFC-Card-website/main/src/img/youtube.png" alt="YouTube" />
       </a>
       <a href="https://www.tiktok.com/@thunder.sowilo">
